ssu_score/error/20200003/25_error.txt
/home/dong/Project1/ssu_score/STD_DIR/20200003/25.c: In function ‘main’:
/home/dong/Project1/ssu_score/STD_DIR/20200003/25.c:38:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/home/dong/Project1/ssu_score/STD_DIR/20200003/25.c:38:1: error: expected declaration or statement at end of input
